buildscript {
    ext {
        springBootVersion = '2.1.0.RELEASE'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

ext.moduleName = 'com.modular.main'

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'com.modular.main'
version = '0.0.2-SNAPSHOT'
sourceCompatibility = 11

repositories {
    mavenCentral()
}


dependencies {
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-parent', version: '2.1.0.RELEASE'
    implementation('org.springframework.boot:spring-boot-starter-web-services')
//    runtimeOnly('com.h2database:h2')
    testImplementation('org.springframework.boot:spring-boot-starter-test')
}


compileJava {
    inputs.property("moduleName", moduleName)
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
        ]
        classpath = files()
    }
}



//compileTestJava {
//    inputs.property("moduleName", moduleName)
//    doFirst {
//        options.compilerArgs = [
//                '--module-path', classpath.asPath,
//                '--add-modules', 'junit',
//                '--add-reads', "$moduleName=junit",
//                '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
//        ]
//        classpath = files()
//    }
//}

jar {
    inputs.property("moduleName", moduleName)
    manifest {
        attributes('Automatic-Module-Name': moduleName)
    }
//    System.out.print('module name ' + moduleName)
}

task createModularJar(type:Exec) {
    ignoreExitValue true
//    exec {
// jar -v -u -f C:\Java11\build\libs\Java11-0.0.2-SNAPSHOT.jar -e ModularApplication --module-version 1.0 -C C:\Java11\build\classes\java\main\ module-info.class
        executable('C:\\Program Files\\Java\\jdk-11.0.1\\bin\\jar.exe')
        args(['--verbose',
              '--update',
              '--file',
              'C:\\Java11\\build\\libs\\Java11-0.0.2-SNAPSHOT.jar',
              '--main-class',
              'ModularApplication',
              '--module-version',
              '1.0',
              '-C',
              'C:\\Java11\\build\\classes\\java\\main\\',
              'module-info.class'
        ] )   }
//}

task createJre(type:Exec) {
    ignoreExitValue true
//    exec {
// jar -v -u -f C:\Java11\build\libs\Java11-0.0.2-SNAPSHOT.jar -e ModularApplication --module-version 1.0 -C C:\Java11\build\classes\java\main\ module-info.class
    executable('C:\\Program Files\\Java\\jdk-11.0.1\\bin\\jlink.exe')
    args(['--module-path',
          'C:\\Java11\\build\\libs\\Java11-0.0.2-SNAPSHOT.jar;C:\\Program Files\\Java\\jdk-11.0.1\\jmods',
          '--add-modules',
          'Java11',
          '--output',
          'C:\\Java11\\jre',
          '--compress=2'
    ] )   }

